# ingesta-evolution-api

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_DECISIONS.md  AWS_DEPLOYMENT_GUIDE.md  CLAUDE.md  Dockerfile  Dockerfile.dev  PLAN_OCR_CLIP_S3_PGVECTOR.md  PROJECT_SPECS.md  README.md  TESTING_GUIDE.md  alembic.ini  curl-examples.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  test-ingestion.ps1  test-ingestion.sh  tmpclaude-23d7-cwd
.claude/: settings.local.json
.claude/agents/: python-architect-enforcer.md  python-ingestion-architect.md
alembic/: env.py
alembic/versions/: 001_create_image_metadata_table.py  002_upgrade_vector_dims_to_1024.py
aws/: README.md  eventbridge-lambda-rule.json  eventbridge-rule.json  lambda-batch-processor.json  task-definition.json
config/: init-multiple-dbs.sh
data/metadata/: images.csv
docs/: ARCHITECTURE.md
scripts/: export_clip_onnx.py
src/: __init__.py  main.py
src/application/: __init__.py
src/application/ingestion/: __init__.py  dto.py
src/application/ingestion/ports/: __init__.py  event_publisher_port.py  image_source_port.py  image_storage_port.py  metadata_repository_port.py  ocr_port.py  vectorizer_port.py
src/application/ingestion/use_cases/: __init__.py  ingest_chat_images.py  ingest_images.py  ingest_status_images.py
src/application/instances/: __init__.py
src/application/instances/ports/: __init__.py  (+2 more)
src/application/messaging/: __init__.py
src/batch/: __init__.py  lambda_handler.py  process_pending.py
src/config/: __init__.py  logging_config.py  settings.py
src/domain/: __init__.py
src/domain/contacts/: __init__.py  entities.py  exceptions.py  value_objects.py
src/domain/ingestion/: __init__.py  entities.py  exceptions.py  value_objects.py
src/domain/instances/: __init__.py  entities.py  exceptions.py  value_objects.py
src/domain/messaging/: __init__.py  entities.py  exceptions.py  value_objects.py
src/infrastructure/: __init__.py
src/infrastructure/http/: __init__.py  dependencies.py
src/infrastructure/integrations/: __init__.py
src/infrastructure/messaging/: __init__.py
src/infrastructure/ocr/: auto_ocr_adapter.py  tesseract_adapter.py  textract_adapter.py
src/infrastructure/persistence/: __init__.py  database.py
src/infrastructure/storage/: __init__.py  filesystem_image_storage.py  image_converter.py  s3_image_storage.py
src/infrastructure/vectorization/: clip_adapter.py  titan_adapter.py
src/shared/: __init__.py
src/workers/: base_worker.py  clip_worker.py  ocr_worker.py  text_embedding_worker.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_evolution_integration.py
tests/integration/: __init__.py  conftest.py  test_api_endpoints.py  test_ingestion_adapters.py
tests/unit/: __init__.py
tests/unit/application/: __init__.py  conftest.py  test_ingest_images_use_case.py  test_send_message_use_case.py
tests/unit/domain/: __init__.py  conftest.py  test_ingestion_entities.py  test_ingestion_value_objects.py  test_instance_entities.py  test_messaging_entities.py
(+43 files in other folders)
